<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heads Up!</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始游戏</string>
    <string name="help">游戏说明</string>
    <string name="quit">退出游戏</string>
    <string name="backtomain">返回菜单</string>
    <string name="select_title">请选择词语类型</string>
    <string name="movie_name">电影名称</string>
    <string name="actor_name">男演员</string>
    <string name="actress_name">女演员</string>
    <string name="location_name">世界地名</string>
    <string name="daily_name">日常用品</string>
    <string name="food_name">食品名称</string>
    <string name="brand_name">品牌名称</string>
    <string name="readyhint">将屏幕向下翻动两次\n开始游戏</string>
    <string name="pass">跳过</string>
    <string name="correct">正确</string>
    <string name="gameend">游戏结束</string>
    <string name="gameresult_title">游戏成绩</string>
    <string name="help_content">        1. 本游戏需要2位玩家配合进行，一人描述词语，另一人猜\n\n
        2. 游戏开始前，玩家可以设置一共有几组玩家进行游戏\n\n
        3. 玩家可选择词库进行游戏\n\n
        4. 游戏开始前会提示猜词的玩家把手机放置于额头，当程序检测到动作完成后将自动开始游戏\n\n
        5. 每轮游戏限时60秒，每组玩家需要在60秒内猜出尽量多的词语\n\n
        6. 将手机屏幕向下翻转代表猜测正确，加1分；向上翻转代表跳过本词，换下一个词\n\n
        7. 分数高的一组玩家为胜者\n\n</string>
    <string name="title_activity_game">游戏中</string>

</resources>
