<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@drawable/lightblue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_centerHorizontal="true"
        	android:gravity="center"
        	android:textSize="36sp"
        	android:textStyle="bold"
        	android:textColor="@drawable/white"
        	android:text="@string/app_name" />
	
	</RelativeLayout>
	
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
    	
    	<Button
    	    android:id="@+id/buttonStart_id"
    	    android:layout_width="200dp"
    	    android:layout_height="50dp"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/start" />
    	
    	<Button
    	    android:id="@+id/buttonHelp_id"
    	    android:layout_below="@id/buttonStart_id"
    	    android:layout_marginTop="10dp"
    	    android:layout_width="200dp"
    	    android:layout_height="50dp"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/help"/>
    	
    	<Button
    	    android:id="@+id/buttonQuit_id"
    	    android:layout_below="@id/buttonHelp_id"
    	    android:layout_marginTop="10dp"
    	    android:layout_width="200dp"
    	    android:layout_height="50dp"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/quit"/>
    
    </RelativeLayout>

</LinearLayout>
