<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/lightblue" >
    
    <Button
	    android:id="@+id/buttonHelpBack_id"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/backtomain"
	    />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/buttonHelpBack_id" >
        
        <TextView
            android:id="@+id/textviewHelpTitle_id"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:textSize="36sp"
        	android:textStyle="bold"
        	android:textColor="@drawable/white"
        	android:text="@string/help" />
    	<ScrollView
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_below="@id/textviewHelpTitle_id">
    	    <TextView
        		android:scrollbars="vertical"
        		android:scrollbarStyle="outsideOverlay"
        		android:scrollbarFadeDuration="2000"
        		android:singleLine="false"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="20dp"
        		android:textSize="20sp"
        		android:textColor="@drawable/white"
        		android:text="@string/help_content" />
    	</ScrollView>
        
    </RelativeLayout>
    
    
	
</RelativeLayout>
